[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/fonts/hud-font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/fonts/btn-font.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/HUD.gd" type="Script" id=3]

[sub_resource type="InputEventAction" id=1]
action = "ui_select"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 32
custom_constants/margin_top = 32
custom_constants/margin_left = 32
custom_constants/margin_bottom = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="Margin"]
margin_left = 32.0
margin_top = 32.0
margin_right = 448.0
margin_bottom = 688.0
custom_constants/separation = 32

[node name="ScoreLbl" type="Label" parent="Margin/VBox"]
margin_right = 416.0
margin_bottom = 78.0
custom_fonts/font = ExtResource( 1 )
text = "00"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MsgLbl" type="Label" parent="Margin/VBox"]
margin_top = 110.0
margin_right = 416.0
margin_bottom = 269.0
custom_fonts/font = ExtResource( 1 )
text = "Dodge the Creeps!"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartBtn" type="Button" parent="Margin/VBox"]
margin_left = 133.0
margin_top = 301.0
margin_right = 283.0
margin_bottom = 372.0
rect_min_size = Vector2( 150, 0 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
shortcut = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MsgTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="Margin/VBox/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="timeout" from="MsgTimer" to="." method="_on_MsgTimer_timeout"]
